--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "mqtt2thingspeak",
-    "description": "Subscribes to MQTT topics and pushes messages to Thingspeak channel fields based on a map of topic to channel/feed.",
     "version": "0.0.0",
-    "private": true,
+    "description": "Subscribe to MQTT topics and bind messages to Thingspeak channels",
     "scripts": {
-        "start": "node ./index.js"
+        "start": "node ./index.js",
+        "test": "mocha test/test.js"
     },
     "repository": {
         "type": "git",
@@ -12,12 +12,17 @@
     },
     "keywords": [
     "mqtt",
-    "thingspeak",
-    "subscribe"
+    "thingspeak"
   ],
     "dependencies": {
+        "csv-parse": "^1.0.4",
         "js-yaml": "~3.5.4",
         "mqtt": "~1.7.3",
         "thingspeakclient": "~0.4.0"
-    }
+    },
+    "devDependencies": {
+        "mocha": "^2.4.5"
+    },
+    "author": "Chris Hatch",
+    "license": "GPL-3.0"
 }
